# Lerobot_system

./: .gitignore  .gitmodules  README.md  consistency_results.csv  ik_analysis_result.csv  patch_rosbridge_v2.py
calibration/koch/follower/: koch_left_follower_calibration.json  koch_right_follower_calibration.json
calibration/koch/leader/: koch_left_leader_calibration.json  koch_right_leader_calibration.json
docker/GPU/: Dockerfile  build.sh  ros_venv_entrypoint.sh  run.sh
docs/: BAG_RECORDER_GUIDE.md  DATA_PROCESSING_GUIDE.md  KOCH_MOVEIT_MANUAL.md  KOCH_ROBOT_MANUAL.md  KOCH_ROBOT_VISUALIZATION.md  LEROBOT_INTEGRATION.md  LEROBOT_TRAIN_GUIDE.md  README.md  ROS2_TO_LEROBOT_GUIDE.md  VT_REFINE_GUIDE.md
entrypoint/: Camera.sh  follower.sh  leader_follower-teleop.sh
ros2_ws/src/bag_recorder/: package.xml  setup.py
ros2_ws/src/bag_recorder/bag_recorder/: recorder.py  recorder_ui.py
ros2_ws/src/bag_recorder/config/: bag_recorder.yaml
ros2_ws/src/bag_recorder/launch/: record.launch.py  record_with_ui.launch.py
ros2_ws/src/koch_MoveIt/koch_description/: CMakeLists.txt  package.xml
ros2_ws/src/koch_MoveIt/koch_description/urdf/: koch.urdf
ros2_ws/src/koch_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/koch_simulation/: README.md  package.xml  setup.cfg  setup.py
scripts/: debug_joint_names.py  lerobot_ros2_connect.py  replay_lerobot_dataset.py  ros2_to_lerobot.py  ros2_to_lerobot_config.yaml  start_fusion_system.sh
scripts/end-effector/: README.md  convert_jt_to_ee.py  replay_ee_ik_robust.py  robust_pino_kinematics.py  verify_consistency.py
(+68 files in other folders)
