<?xml version="1.0"?>
<package format="3">
  <name>bag_recorder</name>
  <version>0.1.0</version>
  <description>Record rosbag2 using a YAML config via launch or CLI.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Core build/exec dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- We shell out to `ros2 bag record`, so rosbag2 and friends should be present -->
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_storage</exec_depend>
  <exec_depend>rosbag2_compression</exec_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Python deps -->
  <exec_depend>python3-yaml</exec_depend>

  <!-- For ament index to locate package resources -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
