<?xml version="1.0"?>
<package format="3">
  <name>moveit_resources_koch_description</name>
  <version>0.0.1</version>
  <description>Koch robot resources used for MoveIt</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
